sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: not found: value i
  while (i<n-1) {
         ^AlgGnomeSort:6: error: not found: value i
      if (i>0 & plusPetit(i+1,i)) {
          ^AlgGnomeSort:6: error: not found: value i
      if (i>0 & plusPetit(i+1,i)) {
                          ^AlgGnomeSort:6: error: not found: value i
      if (i>0 & plusPetit(i+1,i)) {
                              ^AlgGnomeSort:7: error: not found: value i
        echange(i,i+1)
                ^AlgGnomeSort:7: error: not found: value i
        echange(i,i+1)
                  ^AlgGnomeSort:8: error: not found: value i
        i=i-1
        ^AlgGnomeSort:10: error: not found: value i
    	else if (i=0 & plusPetit(i+1,i)) {
                 ^AlgGnomeSort:11: error: not found: value i
        i=i+1
        ^AlgGnomeSort:13: error: not found: value i
      else if (plusPetit(i,i+1)) {
                         ^AlgGnomeSort:13: error: not found: value i
      else if (plusPetit(i,i+1)) {
                           ^AlgGnomeSort:14: error: not found: value i
        i=i+1
        ^